objects/Workflow_Rule__c.object
<CustomObject>
    <description>It consists of all the workflow rules.</description>
    <fields>
        <fullName>Changed_By__c</fullName>
        <description>Who has updated the workflow rule.</description>
        <label>Changed By</label>
        <picklist>
            <picklistValues>
                <fullName>Nitesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>It captures all the details about the workflow rule</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_to_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Object to which this workflow rule applies.</description>
        <label>Related to Object</label>
        <referenceTo>Object__c</referenceTo>
        <relationshipLabel>Workflow Rules</relationshipLabel>
        <relationshipName>Workflow_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>user stories, change requests, tickets which impacts the components.</description>
        <label>Request</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Workflow Rules</relationshipLabel>
        <relationshipName>Workflow_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rule_Criteria_1__c</fullName>
        <description>It consists first 255 characters of the workflow rule criteria.</description>
        <label>Rule Criteria 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rule_Criteria_2__c</fullName>
        <description>It consists part of rule criteria that is after first 255 characters of the workflow rule criteria.</description>
        <label>Rule Criteria 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rule_Criteria__c</fullName>
        <description>Criteria that triggers the workflow rule.</description>
        <label>Rule Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Workflow Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Workflow Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>